# FdF

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
.github/: copilot-instructions.md
include/: fdf  ft_fdf.h  mlx  mlx_int.h  mymlx_int.h
lib/fdf/: Makefile
lib/fdf/draw/: Makefile.mk  draw_line_d.c  ft_fdf_get_colour.c
lib/fdf/include/: fdf_lib.h  util.h
lib/fdf/utils/: Makefile.mk  check_endianness.c
resources/demo_maps/: colored.fdf  height.fdf
src/: cleanup.c  data_convert.c  draw_colour.c  draw_line_d.c  expose_widget.c  ft_fdf.h  hooks.c  key_hooks.c  load_data.c  main.c  mouse_hooks.c  on_expose.c  projection.c  rotate.c  view.c
